--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,3 +8,10 @@
 @import"experiencia";
 @import"contacto";
 @import"footer";
+@import"./breakPoint768/menu";
+@import"./breakPoint768/title";
+@import"./breakPoint768/sobre_mi";
+@import"./breakPoint768/skill";
+@import"./breakPoint768/formacion";
+@import"./breakPoint768/experiencia";
+@import"./breakPoint768/contacto";
