--- a/src/scss/_contacto.scss
+++ b/src/scss/_contacto.scss
@@ -28,6 +28,7 @@
                 border:none;
                 outline: none;
                 border-radius: 4px;
+                caret-color: #2A7AE4;
 
                 &:hover::placeholder{
                     color:#2A7AE4;
@@ -40,7 +41,9 @@
 
             .formcontato__textarea{
                 margin-bottom: 30px; 
-                padding-bottom: 50px; 
+                padding-bottom: 50px;
+                outline: none; 
+                caret-color: #2A7AE4;
             }
 
             button{
