--- a/src/scss/_formacion.scss
+++ b/src/scss/_formacion.scss
@@ -35,6 +35,7 @@
 
             .academic__courses__item__subtitle{
                 list-style: none;
+                margin-bottom: 10px;
             }
 
         }
