--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,8 @@
 @import"./breakPoint768/formacion";
 @import"./breakPoint768/experiencia";
 @import"./breakPoint768/contacto";
+@import"./breakPoint480/menu";
+@import"./breakPoint480/title";
+@import"./breakPoint480/sobre_mi";
+@import"./breakPoint480/skill";
+@import"./breakPoint480/formacion";
