--- a/src/scss/breakPoint768/_sobre_mi.scss
+++ b/src/scss/breakPoint768/_sobre_mi.scss
@@ -1,18 +1,20 @@
-.about{
-    background-color: #EAF2FD;
+@media (max-width: 768px){
+        .about{
+        background-color: #EAF2FD;
 
-    .about__container{
-        padding: 1rem 3rem;
+        .about__container{
+            padding: 1rem 3rem;
 
-        .about__title{
-            font-size: 22px;
-            margin-bottom: 2rem;
-        }
+            .about__title{
+                font-size: 22px;
+                margin-bottom: 2rem;
+            }
 
-        .about__paragraph{
-            width: 100%;
-            padding-bottom: 2rem;
-            font-size: 14px;
+            .about__paragraph{
+                width: 100%;
+                padding-bottom: 2rem;
+                font-size: 14px;
+            }
         }
     }
 }
