--- a/src/scss/_experiencia.scss
+++ b/src/scss/_experiencia.scss
@@ -9,12 +9,12 @@
     }
 
     .experiencie__box{
-        padding: 3rem 6rem;
+        padding: 3rem;
         display: flex;
         align-items: center;
-
-       
+               
         .experience__img{
+            width:60vw;
             padding-right: 3rem;
         }
 
@@ -34,6 +34,7 @@
                     padding: 20px 30px;
                     color: #2A7AE4;
                     border: 1px solid #2A7AE4;
+                    margin-top: 10px;
                 }
             }
 
@@ -44,6 +45,7 @@
                     background-color: #2A7AE4;
                     color: #F5F5F5;
                     border: 1px solid #2A7AE4;
+                    margin-top: 10px;
                 }
             }
 
