--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,4 @@
 @import"./breakPoint480/sobre_mi";
 @import"./breakPoint480/skill";
 @import"./breakPoint480/formacion";
+@import"./breakPoint480/menu";
