--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -25,6 +25,7 @@
             ul{
                 display: flex;
                 justify-content: end;
+                flex-wrap: wrap;
                                
                 li{
                     padding:10px;
