--- a/src/scss/_title.scss
+++ b/src/scss/_title.scss
@@ -5,15 +5,21 @@
     .title__div{
         display: flex;
         flex-direction: row-reverse;
-        justify-content: space-between;
-        padding: 2rem 6rem;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 2rem 3rem;
+
+        .title__profile{
+            width: 300px;
+            height: 300px;
+        }
 
         .title__container{
             width: 70%;
             padding: 20px 0px;
 
             h2{
-                font-size: 52px;
+                font-size: 3vw;
                 padding: 30px 0;
             }
 
@@ -35,8 +41,6 @@
                 }
             }
         }
-    }
-
-    
+    }  
     
 }
